--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.17.1",
+    "express-hbs": "^2.3.0",
+    "hbs": "^4.0.6",
     "request": "^2.88.0",
     "sprintf-js": "^1.1.2",
     "sqlite3": "^4.1.0"
