--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "express-hbs": "^2.3.0",
     "hbs": "^4.0.6",
     "request": "^2.88.0",
